syntax = "proto3";

package user;

option go_package = "./proto/user;user";

service User {
    // 注册
    rpc Register(UserRegisterRequest) returns (UserRegisterResponse) {}
    // 登陆
    rpc Login(UserLoginRequest) returns (UserLoginResponse) {}
    // 查询
    rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse) {}
}
// 查询
message UserInfoRequest {
    string user_name = 1;
}

message UserInfoResponse {
    uint64 user_id = 1;
    string user_name = 2;
}

// 注册

message UserRegisterRequest {
    string user_name = 1;
    string first_name = 2;
    string password = 3;
}

message UserRegisterResponse {
    string message = 1;
}

// Login

message UserLoginRequest {
    string user_name = 1;
    string password = 2;
}

message UserLoginResponse {
    bool is_success = 1;
}